[gd_scene load_steps=12 format=2]

[ext_resource path="res://sprites/charachters/CROW/CROW_3.png" type="Texture" id=1]
[ext_resource path="res://sprites/charachters/CROW/CROW_1.png" type="Texture" id=2]
[ext_resource path="res://sprites/charachters/CROW/CROW_2.png" type="Texture" id=3]
[ext_resource path="res://CrowEnemy2.gd" type="Script" id=4]
[ext_resource path="res://crowMovement.tres" type="Animation" id=5]
[ext_resource path="res://sound/sound effects/crow.wav" type="AudioStream" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 1 ) ],
"loop": true,
"name": "CrowAnim",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 127.973
height = 352.454

[sub_resource type="CapsuleShape2D" id=3]
radius = 127.973
height = 352.454

[sub_resource type="Curve2D" id=4]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -33.4589, 23.2266, 0, 0, 0, 0, 0, -3520 )
}

[sub_resource type="CircleShape2D" id=5]
radius = 5243.13

[node name="CrowEnemy" type="Node2D"]
scale = Vector2( 0.1, 0.1 )
script = ExtResource( 4 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
position = Vector2( -33.4589, 23.2266 )
scale = Vector2( 1, 1 )
collision_layer = 32768
motion/sync_to_physics = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="KinematicBody2D"]
frames = SubResource( 1 )
animation = "CrowAnim"
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( -57.181, 30.2723 )
rotation = 2.39808
shape = SubResource( 2 )
disabled = true

[node name="crowHitBox" type="Area2D" parent="KinematicBody2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D/crowHitBox"]
position = Vector2( -57.181, 30.272 )
rotation = 2.39808
shape = SubResource( 3 )

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource( 4 )

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2( -33.4589, 23.2266 )
rotate = false

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Path2D/PathFollow2D"]
remote_path = NodePath("../../../KinematicBody2D")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_process_mode = 0
anims/crowMovement = ExtResource( 5 )

[node name="crowSoundDetector" type="Area2D" parent="."]
collision_layer = 32768

[node name="CollisionShape2D" type="CollisionShape2D" parent="crowSoundDetector"]
shape = SubResource( 5 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="crowSoundDetector"]
stream = ExtResource( 6 )
attenuation = 5.85634
[connection signal="body_entered" from="KinematicBody2D/crowHitBox" to="." method="_on_crowHitBox_body_entered"]
[connection signal="body_entered" from="crowSoundDetector" to="." method="_on_crowSoundDetector_body_entered"]
[connection signal="body_exited" from="crowSoundDetector" to="." method="_on_crowSoundDetector_body_exited"]
